@@ -1,3 +1,8 @@
+2001-05-14  Sam Steingold  <sds@gnu.org>
+
+	* defs2.lisp (with-standard-io-syntax): finish the 2000-12-12
+	patch - bind *PRINT-RPARS* and *PRINT-INDENT-LISTS* appropriately
+
 2001-05-12  Sam Steingold  <sds@gnu.org>
 
 	* pathname.d (pslashp, lslashp, Z_AT_SLASH, Z_SHIFT): new macros
